Fix align of navbar items on all dbs page

--- a/assets/less/fauxton.less
+++ b/assets/less/fauxton.less
@@ -225,7 +225,7 @@ tbody {
     padding: 14px 5px 30px;
   }
   .btn .icon {
-    font-size: 21.5px;
+    font-size: 16px;
     margin-right: 0;
   }
 }
@@ -1138,7 +1138,7 @@ div.add-dropdown {
     background-color: transparent;
     padding: 0;
     li {
-      padding:15px 10px;
+      padding:20px 10px;
       height: 60px;
       vertical-align: top;
       &:first-child {
@@ -1263,7 +1263,7 @@ div.add-dropdown {
       color: #999;
       .icon-search{
         position: absolute;
-        top: 22px;
+        top: 20px;
         right: 15px;
       }
     }
@@ -1288,7 +1288,7 @@ div.add-dropdown {
   .btn-primary {
     .icon-search{
       position: absolute;
-      top: 18px;
+      top: 20px;
       right: 15px;
     }
   }
